# mpcs51410_final_project

./: CMakeLists.txt  README.txt
Project/: CMakeLists.txt  locator.h  main.cpp  mysql_login.h
Project/admin_management/: CMakeLists.txt  admin_logger.cpp  admin_logger.h  admin_process.h
Project/course_catalog/: CMakeLists.txt  catalog_data_controller.h  catalog_data_objects.cpp  catalog_data_objects.h  catalog_process.h
Project/course_manipulation/: CMakeLists.txt  course_manip_data_objects.h  course_manip_logger.cpp  course_manip_logger.h  course_manip_process.h
Project/data_management/: CMakeLists.txt  data_controllers.cpp  data_controllers.h
Project/identity_access/: CMakeLists.txt  account_data_controller.cpp  account_data_controller.h  account_data_objects.h  account_login.cpp  account_login.h  account_sql_tables.h  account_user_objects.cpp  account_user_objects.h  event_logger.h
Project/registration/: CMakeLists.txt  reg_restrictions.sql  reg_table.sql  registration_add_course.cpp  registration_add_course.h  registration_data_controller.cpp  registration_data_controller.h  registration_data_objects.cpp  registration_data_objects.h  registration_logger.cpp  registration_logger.h  registration_process.cpp  registration_process.h  registration_sql_tables.h  registration_user_visitors.cpp  registration_user_visitors.h
ProjectTests/: CMakeLists.txt  course_manipulation_tests.cpp  identity_access_tests.cpp  login_tests.cpp  registration_tests.cpp
